<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Namma Apartments</string>
    <string name="namma_apartments">@string/app_name</string>
    <string name="history_button_description">History button to view past data</string>
    <string name="back_button_description">Back button to navigate previous activity</string>
    <string name="information_about_the_current_screen">Information about the current screen</string>
    <string name="check_network_connection">Please check your Network Connection</string>
    <string name="faq_url">https://www.nammaapartments.com/faq</string>
    <string name="society_services">Society Services</string>
    <string name="apartment_services">Apartment Services</string>
    <string name="namma_apartments_description">One stop shop solution for all your Society needs.</string>
    <string name="society_services_description">A smarter way to manage your daily needs from our dedicated nammaApartmentService team.</string>
    <string name="apartment_services_description">Enjoy benefits of all Digital Apartment Services under one umbrella with ease and control.</string>
    <string name="society_image_on_the_splash_screen">Society image on the splash screen</string>
    <string name="apartment_image_on_the_splash_screen">Society image on the splash screen</string>
    <string name="namma_apartments_image_on_the_splash_screen">Namma Apartments image on the splash screen</string>
    <string name="lets_get_started">Let\'s Get Started</string>
    <string name="phone_verification_activity_title">Phone Verification</string>
    <string name="enter_verification_code">We need to verify your account. Please enter the 6 digit verification
    code sent to your mobile number.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="incorrect_otp">You have entered an incorrect OTP</string>
    <string name="auto_verification_completed">AutoVerification completed. Please wait while we check your Account in our system. . .</string>
    <string name="record_not_found">Record not found. Please contact your Association.</string>
    <string name="image_description">Image to indicate that the user does not exist in the database.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="waiting_for_otp">Waiting for OTP. . .</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="wrong_otp_entered">Wrong OTP has been entered</string>
    <string name="verifying_account">Verifying Account</string>
    <string name="my_flat_details">My Flat Details</string>
    <string name="city">CITY</string>
    <string name="societyName">SOCIETY</string>
    <string name="apartmentName">APARTMENT</string>
    <string name="flat">FLAT</string>
    <string name="resident_type">RESIDENT TYPE</string>
    <string name="owner">Owner</string>
    <string name="tenant">Tenant</string>
    <string name="verification_message">Our team will verify the details provided by you. We will notify you once the verification is completed.</string>
    <string name="creating_your_account">Creating your Account</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="create_account">Create Account</string>
    <string name="multiple_admin_restricted">Sorry, we already have an Admin from your Flat. Please ask admin to add you as a Family Member or Friend.</string>
    <string name="title_multiple_admin">Registration unsuccessful</string>
    <string name="city_hint">Search City</string>
    <string name="society_hint">Search Society</string>
    <string name="apartment_hint">Search Apartment</string>
    <string name="flat_hint">Search Flat</string>
    <string name="full_name">Full Name</string>
    <string name="_91">+91</string>
    <string name="phone_number">Mobile Number</string>
    <string name="email_id">Email-Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree_to_terms_and_conditions">By clicking on Sign Up, I agree to Namma Apartments Privacy Policy and Terms &amp; Conditions.</string>
    <string name="i_already_have_an_account">I already have an Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="login">LOGIN</string>
    <string name="namma_apartments_society_services_image">Namma Apartments Society Services image</string>
    <string name="namma_apartments_apartment_services_image">Namma Apartments Apartment Services image</string>
    <string name="service_icon">Service Icon</string>
    <string name="rate_us_dialog_title">Enjoying Namma Apartments? </string>
    <string name="submit">Submit</string>
    <string name="rate_us_dialog_message">Tap a star to rate it on the Play Store.</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="logout_dialog_title">Logout Message</string>
    <string-array name="society_services_list">
        <item>@string/digital_gate</item>
        <item>@string/plumber</item>
        <item>@string/carpenter</item>
        <item>@string/electrician</item>
        <item>@string/garbage_collection</item>
        <item>@string/event_management</item>
        <item>@string/medical_emergency</item>
    </string-array>
    <string name="digital_gate">Digi Gate</string>
    <string name="plumber">Plumber</string>
    <string name="carpenter">Carpenter</string>
    <string name="electrician">Electrician</string>
    <string name="garbage_collection">Garbage Collection</string>
    <string name="event_management">Event Management</string>
    <string name="medical_emergency">Medical Emergency</string>
    <string name="enjoy_free_service">Enjoy the free Service</string>
    <string-array name="apartment_services_list">
        <item>@string/cook</item>
        <item>@string/maid</item>
        <item>@string/car_bike_cleaning</item>
        <item>@string/child_day_care</item>
        <item>@string/daily_newspaper</item>
        <item>@string/milk_man</item>
        <item>@string/laundry</item>
        <item>@string/driver</item>
    </string-array>
    <string name="cook">Cook</string>
    <string name="maid">Maid</string>
    <string name="car_bike_cleaning">Car/Bike Cleaning</string>
    <string name="child_day_care">Child Day Care</string>
    <string name="daily_newspaper">Daily Newspaper</string>
    <string name="milk_man">Milk Man</string>
    <string name="laundry">Laundry</string>
    <string name="driver">Driver</string>
    <string name="groceries">Groceries</string>
    <string name="images_of_digital_gate_services">Images of Digital Gate Services</string>
    <string name="refer_title">Refer via</string>
    <string name="whatsapp_msg">Hey there! I would like to have your service at my Flat. Revert back so that we can schedule and sort things out quickly.</string>
    <string name="message_body">Hey there! I got the reference of this Service from Namma Apartments app. You can also avail this Service by downloading..</string>
    <string name="message_name">sms_body</string>
    <string name="apartment_service_unavailable">Sorry you cannot use this feature since currently there is no apartment service available at your Society.</string>
    <string name="apartment">apartment</string>
    <string name="groceries_unavailable">We are setting up soon in your Society. We will notify you once we are there.</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="refer">Refer</string>
    <string name="digital_gate_title">Digi Gate</string>
    <string name="invite_visitors">Invite Guests</string>
    <string name="my_visitors_list">My Visitors List</string>
    <string name="my_daily_services">My Daily Services</string>
    <string name="my_family_members">My Family Members</string>
    <string name="my_guards">My Guards</string>
    <string name="notify_digital_gate">Notify Digi Gate</string>
    <string name="my_sweet_home">My Sweet Home</string>
    <string name="emergency">Emergency</string>
    <string name="visitor_name">Guest Name</string>
    <string name="visitor_mobile">Guest Mobile</string>
    <string name="select_from_contact">Select From Contact</string>
    <string name="calendar_image" tools:keep="@string/calendar_image">Calendar Image</string>
    <string name="inviting_visitors">Invite Guests</string>
    <string name="invite">INVITE</string>
    <string name="or">OR</string>
    <string name="contacts_information" tools:keep="@string/contacts_information">Contacts Information</string>
    <string name="pick_date_time"><![CDATA[Date & Time]]></string>
    <string name="select_future_time">Please select future time.</string>
    <string name="send_otp_message">We will send an OTP to your visitor allowing them to enter into your society.</string>
    <string name="invitation_success_title">Invitation Message</string>
    <string name="invitation_success_message">You have successfully invited your Guest.</string>
    <string name="inviting_your_visitor">Inviting your Guest</string>
    <string name="guests">Guests</string>
    <string name="package_arrivals">Package Arrivals</string>
    <string name="cab_arrivals">Cab Arrivals</string>
    <string name="my_guests_list">My Guests List</string>
    <string name="my_guests">Guests</string>
    <string name="visitor">Visitor:</string>
    <string name="guest_name">Guest:</string>
    <string name="status">Status:</string>
    <string name="type">Type:</string>
    <string name="date">Date:</string>
    <string name="time">In Time:</string>
    <string name="invited_by">Inviter:</string>
    <string name="approver">Approver:</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="reschedule">Reschedule</string>
    <string name="cancel">Cancel</string>
    <string name="remove_guest_title">Remove Guest</string>
    <string name="guest">Guest</string>
    <string name="cancel_invitation_title">Cancel Invitation</string>
    <string name="cancel_invitation_message">Are you sure you want to cancel this Invitation?</string>
    <string name="remove_guest_message">Are you sure you want to remove this Guest data from the list?</string>
    <string name="pick_date">Pick Date</string>
    <string name="time_pick">Pick Time</string>
    <string name="package_vendor">Package Vendor</string>
    <string name="valid_for">Valid For</string>
    <string name="_1_hr">1 hr</string>
    <string name="_2_hrs">2 hrs</string>
    <string name="_4_hrs">4 hrs</string>
    <string name="_6_hrs">6 hrs</string>
    <string name="_8_hrs">8 hrs</string>
    <string name="_12_hrs">12 hrs</string>
    <string name="_16_hrs">16 hrs</string>
    <string name="_24_hrs">24 hrs</string>
    <string name="notify_gate">Notify Gate</string>
    <string name="cab_state_code_hint">KA</string>
    <string name="cab_rto_number_hint">01</string>
    <string name="cab_serial_number_one_hint">AB</string>
    <string name="cab_serial_number_two_hint">1234</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="grant_access">Grant Access</string>
    <string name="access_to_notifications">Please note that this member will now have access to all notifications.</string>
    <string name="image_notification">Image to indicate a notification to the head of the family member for giving access.</string>
    <string name="notification_alert">Notification Alert</string>
    <string name="change_access">Change Access</string>
    <string name="update">Update</string>
    <string name="cab_number_validation">Please Enter Cab Number</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="vehicle_number">Vehicle Number</string>
</resources>