<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/ic_account_box"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_appSettings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_rateUs"
            android:icon="@drawable/ic_star_black"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

</menu>
