<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textVehicleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/vehicle_number"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="4">

        <EditText
            android:id="@+id/editVehicleStateCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:gravity="center"
            android:hint="@string/cab_state_code_hint"
            android:inputType="textCapCharacters"
            android:maxLength="2"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editVehicleRtoNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:gravity="center"
            android:hint="@string/cab_rto_number_hint"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editVehicleSerialNumberOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.05"
            android:gravity="center"
            android:hint="@string/cab_serial_number_one_hint"
            android:inputType="textCapCharacters"
            android:maxLength="2"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor,TextFields" />

        <EditText
            android:id="@+id/editVehicleSerialNumberTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:gravity="center"
            android:hint="@string/cab_serial_number_two_hint"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_numbers_size"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <TextView
        android:id="@+id/textErrorCabNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/cab_number_validation"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/nmBlack"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/nmLightYellow"
            android:textSize="@dimen/button_default_size"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/nmBlack"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textColor="@color/nmLightYellow"
            android:textSize="@dimen/button_default_size"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>
