<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".nammaapartmentsservices.digitalgate.notifydigitalgate.ExpectingPackageArrival">

    <include layout="@layout/activity_base" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPackageVendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/package_vendor"
                android:textColor="@color/nmBlack"
                android:textSize="@dimen/text_view_default_size" />

            <EditText
                android:id="@+id/editPackageVendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/nmBlack"
                android:textSize="@dimen/edit_text_default_size" />

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/pick_date_time"
                android:textColor="@color/nmBlack"
                android:textSize="@dimen/text_view_default_size" />

            <EditText
                android:id="@+id/editDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/calendar"
                android:drawableRight="@drawable/calendar"
                android:focusableInTouchMode="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textValidFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/valid_for"
                android:textColor="@color/nmBlack"
                android:textSize="@dimen/text_view_default_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_1_hr"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button2Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_2_hrs"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button4Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_4_hrs"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button6Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_6_hrs"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button8Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_8_hrs"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button12Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_12_hrs"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button16Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_16_hrs"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/button24Hr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_design"
                    android:text="@string/_24_hrs"
                    android:textAllCaps="false" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonNotifyGate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@color/nmBlack"
                android:text="@string/notify_gate"
                android:textColor="@color/nmLightYellow" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>