<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutYesNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textGrantAccess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grant_access"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_default_size" />

        <Button
            android:id="@+id/buttonYes"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_guest_not_selected"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonNo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_guest_selected"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/nmBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/buttonChangeAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:text="@string/change_access"
            android:textAllCaps="false"
            android:textColor="@color/nmBlack"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>