<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <include layout="@layout/activity_base" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/namma_apartments_society_services_image"
            android:scaleType="fitXY"
            android:src="@drawable/namma_apartments" />

        <TextView
            android:id="@+id/textSocietyServices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/society_services"
            android:textAllCaps="true"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_default_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/namma_apartments_apartment_services_image"
            android:scaleType="fitXY"
            android:src="@drawable/namma_apartments" />

        <TextView
            android:id="@+id/textApartmentServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/apartment_services"
            android:textAllCaps="true"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_default_size" />
    </LinearLayout>

</LinearLayout>